data/all_generated_tests/raw_wast_tests/block_StackCorruption_1939.wast
;; 10. **Test Description**: Implement a `block` that includes a function call expecting specific parameter stack entries with undefined or incorrectly pushed values, ensuring function parameters are validated.    - **Constraint Checked**: Validates that the stack state matches expected function parameters immediately before a function call within a block.    - **Relation to Stack Corruption**: Incorrect parameter handling in calls can corrupt the stack state both within and outside the block, leading to erroneous function executions and stack corruption.

(assert_invalid
  (module
    (func $example (param i32) (result i32)
      (i32.add (i32.const 2) (i32.const 3)))
    (func $test-block
      (block (result i32)
        (i32.const 1)
        (call $example)  ;; Missing parameter pushes causing a stack mismatch
      )
    )
  )
  "type mismatch"
)